# Finance-Manager

./: .gitignore  CHANGELOG.md  README.md  dev-to-main.md  ecosystem.config.js  package copy.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release.sh
backend/: .env.example  finance_server_bin.spec  package.json  pyproject.toml  requirements.txt  run_server.py
backend/finance_server/: __init__.py  all_events.json  banks.py  main.py  models.py
backend/finance_server/api/: __init__.py  _crud.py  analytics.py  bank_credentials.py  categories.py  db_export_import.py  deps.py  fints.py  receipts.py  reference_data.py  subscription_identities.py  subscriptions.py  sync.py  transactions.py
backend/finance_server/core/: config.py  database.py  paths.py  schema.py  seed_data.py
backend/finance_server/db/: __init__.py  analytics.py  categories.py  connection.py  credentials.py  oldcategories.csv  olddata.csv  paths.py  receipts.py  references.py  schema.py  seed_data.py  settings.py  subscription_identities.py  sync.py  transactions.py  utils.py
backend/finance_server/fints/: __init__.py  accounts.py  balance.py  banks.py  client.py  common.py  service.py  sync.py  transactions.py  transfer.py
backend/finance_server/models/: __init__.py  bank.py  category.py  fints.py  sync_models.py  transaction.py
backend/finance_server/services/: __init__.py  (+16 more)
backend/scripts/: build_base_model.py
backend/state/: .fints_state_ing-diba_Michael_Tissen  .fints_state_sparkasse-lemgo_3617617467171517
backend/tests/: conftest.py  test_r2_client.py  test_sync_crypto.py
(+234 files in other folders)
